# Juventus-Sports-Analytics-System

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  dashboard.css  dashboard.html  dashboard.js  fly.toml  main.py  mypy.ini  pyproject.toml  requirements.txt  run_analysis.py  sports_analytics.py  template.env
dashboard/: dashboard.css  dashboard.html  dashboard.js  index.html
src/analytics/: __init__.py  analysis_engine.py  biomechanics.py  core.py  cv_wrapper.py  math_utils.py  models.py  output_manager.py  player_picker.py  player_selection.py  pose.py  rendering.py  reporting.py  scoring.py  sports2d_runner.py  sports_analytics.py  tracking.py  types.py  visualization.py
src/api/: analysis_routes.py  config.py  main.py  selection_sessions.py
src/api/database/: __init__.py  operations.py  supabase_client.py
src/api/jobs/: analysis_job.py  job_helpers.py  job_manager.py
src/api/storage/: __init__.py  cloudinary_client.py  supabase_storage.py
src/api/utils/: decorators.py  email_utils.py  file_utils.py
static_ui/: dashboard.css  dashboard.html  dashboard.js
